--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "dompurify": "^2.3.10",
     "element-plus": "^2.2.12",
     "vue": "^3.0.0",
     "vue-router": "^4.1.3",
